Fix build with KDevPlatform 5.2

BUG: 398063